fix playlist input positioning on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -89,7 +89,6 @@ td.table-data {
 
 /* Create Playlist Page */
 .jumbotron.create-playlist-column {
-	position: fixed;
 }
 
 /* Playlist Table */
